--- a/PageWebProfGloria/src/index.css
+++ b/PageWebProfGloria/src/index.css
@@ -214,7 +214,7 @@ body{margin-top:20px;}
  height: 400%;
 }
 hr{
-  background-color: #EB246C;
+  background-color: #727cf5;
   height: 10px;
   width: 100%;
   display: center;
@@ -256,7 +256,7 @@ col-lg-6 px-0{
 }
 .Frase{
   margin: 33px;
-  color: #EB246C;
+  color: #0d6efd;
 }
 .carousel slide{
 margin: 20px;
@@ -275,4 +275,15 @@ height: 400px;
 }
 .p-4{
   justify-content:space-around;
+}
+p.lead {
+  text-align: justify;
+  font-size: 15px;
+}
+h2{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: 500;
+}
+h5.fs-2{
+  font-size: 40%;
 }
