--- a/PageWebProfGloria/src/index.css
+++ b/PageWebProfGloria/src/index.css
@@ -280,6 +280,12 @@ p.lead {
   text-align: justify;
   font-size: 15px;
 }
+p.lead1 {
+  text-align: justify;
+  font-size: 15px;
+ font-weight: 400;
+}
+
 h2{
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: 500;
@@ -302,7 +308,9 @@ p.card-text{
   flex-wrap: wrap; /* Permitir que las tarjetas se envuelvan a la siguiente línea */
   
 }
-
 .card {
   margin-bottom: 20px; /* Espacio entre las tarjetas */
+}
+footer{
+  border: #1a1a1a;
 }
