--- a/PageWebProfGloria/src/index.css
+++ b/PageWebProfGloria/src/index.css
@@ -314,3 +314,8 @@ p.card-text{
 footer{
   border: #1a1a1a;
 }
+.cardTitle{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  text-align: left;
+}
