--- a/PageWebProfGloria/src/index.css
+++ b/PageWebProfGloria/src/index.css
@@ -310,6 +310,7 @@ p.card-text{
 }
 .card {
   margin-bottom: 20px; /* Espacio entre las tarjetas */
+  background-color: #e9ecef;
 }
 footer{
   border: #1a1a1a;
@@ -318,4 +319,15 @@ footer{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
   text-align: left;
+}
+h2.Acces{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+h5.card-title{
+  color: #1b219f;
+}
+p.SUB{
+  font-size: 120%;
+  font-style: italic;
+  font-weight: 600;
 }
